--- a/app/views/spree/cust/products/show.html.erb
+++ b/app/views/spree/cust/products/show.html.erb
@@ -19,7 +19,7 @@
 							<div class="row">
 								<div class="col1">
 									<%= render :partial => 'image' %>
-									<p class="desc"><b>Allergans:</b> Gluten</p>
+									<p class="desc"><b>Allergens:</b> Gluten</p>
 									<p class="desc"><b></b> Eggs</p>
 									<p class="desc"><b></b> Etca</p>
 									<div class="divider2"></div>
