--- a/app/views/spree/manage/products/show.html.erb
+++ b/app/views/spree/manage/products/show.html.erb
@@ -24,7 +24,7 @@
 					<%= render :partial => 'image' %>
 					<%= link_to "edit", manage_product_images_url(@product) %>
 
-					<p class="desc"><b>Allergans:</b> Gluten</p>
+					<p class="desc"><b>Allergens:</b> Gluten</p>
 					<p class="desc"><b></b> Eggs</p>
 					<p class="desc"><b></b> Etca</p>
 					<div class="divider2"></div>
