--- a/app/views/spree/manage/variants/new.html.erb
+++ b/app/views/spree/manage/variants/new.html.erb
@@ -15,9 +15,9 @@
       <img src="", alt="Image not Available">
 
 
-      <div class="allergans">
+      <div class="allergens">
         <% 5.times do %>
-          <li>add allergans to @product model</li>
+          <li>add allergens to @product model</li>
         <% end %>
       </div>
     </div>
