as a vendor user, quickbooks connection

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2531,6 +2531,105 @@ a.pdf-link img {
 	text-align: center;
 	vertical-align: baseline;
 }
+
+.div-roundbox {
+	font-family: 'p22_underground_cy_prodemi';
+	border: 1px solid #333;
+	overflow: hidden;
+	padding: 15px;
+	display: flex;
+	margin-bottom: 15px;
+
+	-webkit-border-radius: 8px;
+       -moz-border-radius: 8px; 
+            border-radius: 8px;
+
+
+	.col-md-8, .col-md-9 {
+		width: 92%;
+		padding-left: 10px;
+
+		h4 {
+			font-weight: bold;
+			font-size: 20px;
+		}
+
+		p {
+			color: #BBB;
+			line-height: 0.8em;
+			font-weight: 100;
+			font-size: 14px;
+		}
+	}
+}
+
+.div-box {
+	border: none;
+	padding: 15px 5px;
+
+	.col-md-8 {
+		h4 {
+			font-size: 24px;
+		}
+
+		h5 {
+			color: #BBB;
+			line-height: 1.8em;
+			font-weight: 100;
+			font-size: 18px;
+		}
+	}
+
+	p {
+		font-size: 16px;
+		line-height: 2em;
+	}
+}
+
+a.new-integration-button {
+	border: 1px solid #999;
+	background-color: #FF7E00;
+	color: white;
+	padding: 10px;
+	float: right;
+	font-weight: bold;
+	font-family: 'p22_underground_cy_prodemi';
+
+	-webkit-border-radius: 4px;
+       -moz-border-radius: 4px; 
+            border-radius: 4px;
+}
+
+a.item-integration-button {
+	width: 100%;
+	text-align: center;
+	background-color: #EEE;
+	color: black;
+	line-height: 24px;
+}
+
+a.connected-integration-button {
+	background-color: #5AB150;
+	color: white;
+}
+
+div.field {
+	display: flex;
+	margin-bottom: 5px;
+
+	input[type="checkbox"] {
+		position: relative;
+		top: 8px;
+		font-size: 150%;
+	}
+}
+
+div.field label {
+	padding-left: 15px;
+	font-size: 18px!important;
+}
+
+
 /*-------------------------------------------------------------------------*/
 /*	3.	Responsive
 /*-------------------------------------------------------------------------*/
